<resources>
    <string name="app_name">My Medicine App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="name_title">NAME</string>
    <string name="dob_title">DATE OF BIRTH</string>
    <string name="weight_title">WEIGHT</string>
    <string name="last_medicine">LAST MEDICINE</string>
    <string name="next_medicine">NEXT MEDICINE</string>
    <string name="age_title">AGE</string>
    <string name="drugs_list">Drugs List</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_about_privacy">About &amp; Privacy</string>
    <string name="about_title">ABOUT</string>
    <string name="profile">Profile</string>
    <string name="stats">Stats</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="kgs">kgs</string>
    <string name="lbs">lbs</string>
    <string name="copyright"> \u00A9 2015 Darshan Kamble</string>
    <string name="all_rights">All Rights Reserved.</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="medicalinfo">MEDICAL INFO</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="sugar_level">Sugar Level</string>
    <string name="other_stat">Other</string>
    <string name="weight">Weight</string>
    <string name="title_current_drugs">You are taking these drugs currently</string>
    <string name="weight_warning">You have already stored your weight for today.</string>
    <string name="schedule">Schedule</string>
    <string name="title_add_drug">Add Drug</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_privacy">Privacy</string>
    <string name="title_activity_email">Email History</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_drugs_list">Drugs List</string>
    <string name="title_currently_taking">Currently Taking</string>
    <string name="title_activity_stats">Stats</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ht_profile">How To Set Up a Profile</string>
    <string name="ht_drugs_list">What is Drugs List?</string>
    <string name="ht_stats">What are Stats?</string>
    <string name="ht_email">Email History</string>
    <string name="ht_compliance">Drug Compliance</string>
    <string name="help_profile">To setup your profile you can go to: Menu \> Settings \> Profile. Your Profile will consist of your name, your date of birth and your medical information.</string>
    <string name="help_drugs_list">Drugs List is a list of drugs that you\'ve taken in past and in present. By clicking on \'Add Drug\' you can add a drug in the app. By clicking a drug in the Drugs List you will be able to edit the drug. In Drugs List, you can save the drug\'s name\, drug\'s strength and whether or not you are taking the drug currently. Those drugs which you are taking currently will be displayed in the home screen of the app.</string>
    <string name="help_stats">Stats are records like your weight\, your blood pressure\, your sugar level etc. You can also records other stats as well. For blood pressure\, sugar level and weight\, you can records them only once in a day. You can records other stats for as many times as you want in a day. </string>
    <string name="help_compliance">Those drugs which you are currently taking will be displayed in home screen of the app. By clicking o the drug\'s name\, you can record whether or not you have taken the drug today. Once you have recorded your compliance status\, you cannot change it for that day.</string>
    <string name="privacy_statement">\t My Medicine App is a health companion app for people to use in everyday life. With the help of My Medicine App users can record their medicines and its intake. \n\t Any information collected through this app is stored on user\'s device locally. \n The app asks for user\'s name, date of birth and medical info for primary storage. The app also collects user\'s medicinal information like drug name, drug strength etc. \n\t The intended use of app is for health purposes only. Any kind of commercial use is prohibited. We value the privacy of our users. The data collected from the users in this app will not be used for any wrong purposes.</string>
    <string name="help_email">You can email you entire data which is stored in the app to an email id.</string>
    <string name="compliance_records">Compliance Records</string>
    <string name="drug_compliance_question">Did you take it today?</string>
</resources>
