<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399FF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drug_compliance_question"
        android:id="@+id/drug_compliance_text"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/yes_button"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:textColor="#3399FF"
            android:textStyle="bold"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/no_button"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:textColor="#3399FF"
            android:textStyle="bold"
            android:layout_margin="5dp" />
    </LinearLayout>
</LinearLayout>