<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399FF">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drug_name"
        android:layout_margin="5dp"
        android:hint="Drug Name"
        android:textColorHint="#ffffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drug_strength"
        android:hint="Drug Strength"
        android:layout_margin="5dp"
        android:textColorHint="#ffffffff" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_currently_taking"
        android:id="@+id/curr_taking"
        android:layout_margin="5dp"
        android:checked="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="#3399FF"
            android:background="#ffffffff"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="#3399FF"
            android:background="#ffffffff"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>