<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.future.mymedicineapp.ProfileActivity"
    android:background="#3399FF">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/editButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="#ffffff"
        android:textColor="#3399FF"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/editButton">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/editButton">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_title"
                android:id="@+id/title_username"
                android:textColor="#ffffffff"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/userName"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_alignTop="@+id/userName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dob_title"
                android:id="@+id/title_userage"
                android:textColor="#ffffffff"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/userDob"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/medicalinfo"
                android:id="@+id/title_medicalinfo"
                android:textColor="#ffffffff"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/userMedicalInfo"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
