<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.future.mymedicineapp.StatsActivity"
    android:background="#3399FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/blood_pressure"
                android:id="@+id/blood_pressure"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@mipmap/add_drug" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_below="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sugar_level"
                android:id="@+id/sugar_level"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSl"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@mipmap/add_drug" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_below="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout2"
            android:id="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/weight"
                android:id="@+id/weight"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonWt"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@mipmap/add_drug" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_below="@+id/linearLayout3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout4"
            android:layout_below="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/other_stat"
                android:id="@+id/other"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#ffffffff" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonOther"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@mipmap/add_drug" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_below="@+id/linearLayout4" />

    </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="#ffffffff"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="#3399FF"
            android:visibility="invisible" />

</RelativeLayout>
