<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.future.mymedicineapp.FirstActivity"
    android:orientation="vertical"
    android:id="@+id/mainlayout"
    android:background="#3399FF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">

        <View android:id="@+id/fakeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/userName"
            android:layout_toStartOf="@+id/fakeView"
            android:padding="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#ffffffff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_below="@+id/userName"
            android:id="@+id/button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drugs_list"
            android:id="@+id/drugsListButton"
            android:padding="2dp"
            android:background="#ffffffff"
            android:textColor="#3399FF"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/fakeView" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            android:id="@+id/stats"
            android:padding="2dp"
            android:background="#ffffffff"
            android:textColor="#3399FF"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/fakeView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_current_drugs"
            android:id="@+id/textView"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:textAlignment="gravity"
            android:singleLine="false"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#ffffffff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"
            android:layout_below="@+id/textView"
            android:id="@+id/divider" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/drugListView"
            android:layout_above="@+id/drugsListButton"
            android:layout_below="@+id/divider" />

    </RelativeLayout>
</RelativeLayout>
